@@ -1,5 +1,7 @@
 Changes towards version 0.3:
-- Added a Menu-Delete key for the Super-Melee menu (#123) - Michael
+- Changed lander speed to 35 FPS, which matches reported 3DO speed 
+  (Bug #22) -Michael
+- Added a Menu-Delete key for the Super-Melee menu (#123) -Michael
 - Added support for positional (stereo) sound effects, currently
   works only with OpenAL -Mika
 - Fixed screen transitions from homeworld conversations (bug #348) -Michael
